# Bindle

./: .gitignore  CMakeLists.txt  README.md  bindle.proto  conanfile.txt
src/: db.cpp  db.hpp  grpc_server.cpp  main.cpp  test_client.cpp
